--- a/style.css
+++ b/style.css
@@ -1,16 +1,32 @@
-.attribution { font-size: 11px; text-align: center; }
-.attribution a { color: hsl(228, 45%, 44%); }
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+
+.attribution { font-size: 11px; text-align: center; align-items: center; padding-top: 20px; font-family: 'Outfit'; ;}
+.attribution a { color: hsl(0, 0%, 100%); }
 
 *{
     margin: 0%;
     padding: 0%;
+    font-family: 'Outfit';
+    box-sizing: border-box;
+    background-color: color(display-p3 0.018 0.11 0.235);
 }
 
 #card{
-    height: 455px;
-    width: 266px;
+    height: 500px;
+    width: 300px;
+    border-radius: 20px;
+    background-color:rgb(30, 55, 83);
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    padding: 15px;
+    margin-top: 180px;
+
 }
 
 .img{
     width: 250px;
+    align-self: center;
+    border-radius: 5px;
+
 }
