--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 
-.attribution { font-size: 11px; text-align: center; align-items: center; padding-top: 20px; font-family: 'Outfit'; ;}
+.attribution { font-size: 11px; text-align: center; align-items: center; padding-top: 20px; font-family: 'Outfit'; color:rgb(165, 184, 200);}
 .attribution a { color: hsl(0, 0%, 100%); }
 
 *{
@@ -8,6 +8,10 @@
     padding: 0%;
     font-family: 'Outfit';
     box-sizing: border-box;
+    
+}
+body{
+    
     background-color: color(display-p3 0.018 0.11 0.235);
 }
 
@@ -15,18 +19,69 @@
     height: 500px;
     width: 300px;
     border-radius: 20px;
-    background-color:rgb(30, 55, 83);
+    background-color:rgb(23, 48, 74);
     display: flex;
     flex-direction: column;
     margin: auto;
-    padding: 15px;
+    padding: 20px;
     margin-top: 180px;
 
 }
 
 .img{
-    width: 250px;
-    align-self: center;
+    width: 260px;
+    height: auto;
+    /* align-self: center; */
     border-radius: 5px;
+
+}
+
+.heading{
+    font-family: sans-serif ;
+    font-weight:bolder;
+    color: white;
+    margin-top: 10%;
+    margin-bottom: 5%;
+
+
+}
+
+.sub-heading{
+    color: rgb(142, 155, 155);
+    font-size:medium;
+}
+
+.info{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.eth{
+    color: aqua;
+}
+.days{
+    color: aliceblue;
+}
+hr{
+    color: rgb(139, 152, 195);
+}
+
+.creator{
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    margin-top: 10px;
+
+}
+.creator-img{
+    width: 40px;
+}
+.creator-name{
+    font-size: 15px;
+    padding-left: 10px;
+    color: rgb(84, 98, 110);
 
 }
