--- a/style.css
+++ b/style.css
@@ -28,13 +28,47 @@ body{
 
 }
 
+/* #card:hover {
+    transform: translateY(-10px);
+    box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.4);
+  } */
+
 .img{
     width: 260px;
     height: auto;
     /* align-self: center; */
     border-radius: 5px;
+    transition: opacity 0.3s ease, background-color 0.3s ease;
 
 }
+
+.eye-icon {
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    color: white;
+    font-size: 24px;
+  }
+  
+  #card:hover .img {
+    opacity: 0.5;
+  }
+  
+
+  #card:hover .eye-icon {
+    opacity: 1;
+  }
+
+.eye-icon img {
+    width: 24px; 
+    height: auto;
+    filter: brightness(0) invert(1); 
+  }
+
+
 
 .heading{
     font-family: sans-serif ;
